test/good/sets/for01.px

for x in {5} do
    print x
