test/bad/loops/for15.px

for x in 0..1 step 0.5 do
    skip
